# AI-Lead-intelligence-

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.gateway.yml  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml  free-stack-smoke.yml  pr-checks.yml
app/: main.py
app/ai/: embeddings.py  router.py  schemas.py  service.py
app/auth/: router.py  schemas.py  service.py
app/common/: base_repository.py  base_service.py  dependencies.py  enums.py  schemas.py
app/companies/: router.py  schemas.py  service.py
app/contacts/: router.py  schemas.py  service.py
app/core/: config.py  database.py  events.py  exceptions.py  logging.py  metrics.py  middleware.py  redis.py  security.py  tracing.py
app/organizations/: router.py  schemas.py  service.py
app/search/: router.py  schemas.py  service.py
app/users/: router.py  schemas.py  service.py
backend/: Dockerfile  alembic.ini  config.py  database.py  main.py  requirements.txt
backend/alembic/: env.py
backend/app/: orm_registry.py
backend/connectors/: __init__.py  apollo.py  apollo_connector.py  apollo_v2.py  base.py  base_connector.py  clearbit.py  clearbit_connector.py  connector_config.py  hunter.py  hunter_connector.py  mock_discovery.py  registry.py
backend/infrastructure/: __init__.py
backend/migrations/: env.py
backend/scripts/: create_indexes.py  seed_data.py  test_discovery_local.py
backend/tests/: conftest.py  helpers.py  test_analytics_bi.py  test_auth.py  test_companies.py  test_connectors.py  test_contacts.py  test_crm.py  test_health.py  test_platform.py  test_search.py  test_security.py  test_users.py  test_workflows.py
backend/workers/: async_runner.py  celery_app.py  enrichment_worker.py  export_worker.py  lead_scoring_worker.py  notification_worker.py
docs/: architecture.md  database.md
docs/frontend-v3/: 01-information-architecture.md  02-screens-and-flows.md  03-design-system.md  04-component-library.md  05-states-and-interactions.md  06-technical-handoff.md  README.md
docs/phase10/: 01-api-gateway-architecture.md  02-rest-api-specification.md  03-graphql-schema-design.md  04-webhook-platform-design.md  05-plugin-framework-architecture.md  06-connector-sdk-specification.md  07-public-sdk-specifications.md  08-oauth-platform-design.md  09-developer-portal-design.md  10-marketplace-architecture.md  (+11 more)
frontend/: .env.local.example  next.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
scripts/: docker-test.ps1  init_db.sql  install-cloudflare.ps1  setup_analytics_phase9.sql  setup_discovery_local.sql  setup_platform_phase10.sql  setup_security_phase12.sql  setup_workflow_phase8.sql  start-free-stack.ps1  test_discovery_local.py
(+484 files in other folders)
