[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-lead-intelligence"
version = "3.0.0"
description = "Enterprise AI Lead Intelligence Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pydantic[email]>=2.10.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    "httpx>=0.28.0",
    "redis[hiredis]>=5.2.0",
    "celery[redis]>=5.4.0",
    "celery[gevent]>=5.4.0",
    "kombu>=5.4.0",
    "openai>=1.57.0",
    "anthropic>=0.40.0",
    "boto3>=1.35.0",
    "aioboto3>=13.2.0",
    "opensearch-py>=2.7.0",
    "pgvector>=0.3.5",
    "python-slugify>=8.0.4",
    "phonenumbers>=8.13.50",
    "email-validator>=2.2.0",
    "stripe>=11.3.0",
    "authlib>=1.3.2",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.4",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "orjson>=3.10.12",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.1",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "tenacity>=9.0.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "cryptography>=43.0.3",
    "greenlet>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.1",
    "faker>=33.1.0",
    "ruff>=0.8.4",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "locust>=2.32.3",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ANN"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
